putlocker link added

--- a/series/scrubs.html
+++ b/series/scrubs.html
@@ -14,7 +14,9 @@
             <button class="btn btn-primary" onclick="scrubs()">Get Episode</button>
             <a class="btn btn-default" href="../index.html">Back</a>
             <p id="result"></p>
+            <div id="frame"></div>
     </div>
+    <script src="../js/jquery.min.js"></script>
     <script src="../js/scripts.js"></script>
 </body>
 
