--- a/series/friends.html
+++ b/series/friends.html
@@ -3,18 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>F.R.I.E.N.D.S</title>
+    <title>FRIENDS</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
 <body class="series friends">
     <div class=" container">
-            <h1>F.R.I.E.N.D.S</h1>
+            <h1>FRIENDS</h1>
             <button class="btn btn-primary" onclick="friends()">Get Episode</button>
             <a class="btn btn-default" href="../index.html">Back</a>
             <p id="result"></p>
+            <div id="frame"></div>
     </div>
+    <script src="../js/jquery.min.js"></script>
     <script src="../js/scripts.js"></script>
 </body>
 
