--- a/series/himym.html
+++ b/series/himym.html
@@ -10,11 +10,13 @@
 
 <body class="series himym">
     <div class=" container">
-            <h1>How I met your mother</h1>
+            <h1>how i met your mother</h1>
             <button class="btn btn-primary" onclick="himym()">Get Episode</button>
             <a class="btn btn-default" href="../index.html">Back</a>
             <p id="result"></p>
+            <div id="frame"></div>
     </div>
+    <script src="../js/jquery.min.js"></script>
     <script src="../js/scripts.js"></script>
 </body>
 
